made the delete button in edit murder the party,took a bit since i had to do dao shananigans since party is stole bators logic for the discover view like a parasyte and added a smidge of logic on top so it only gets the parties youre in